--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -7,10 +7,19 @@
 </head>
 
 <body>
-  <h1>lkjhgfd</h1>
 
-  <a href="profile.htm">Profile</a>
+  <div class="container-fluid wrapper">
+    <div class="row">
+      <div class="col">
+        <h1>Run'n Fun</h1>
+        
 
-  <script src="bundle.js"></script>
+        
+        <a href="profile.htm">Profile</a>
+      </div>
+    </div>
+  </div>
+
+<script src="bundle.js"></script>
 </body>
 </html>
