axios get all works :)

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -13,11 +13,23 @@
       <div class="col">
         <h1>Run'n Fun</h1>     
         <div id="content">
-          <!-- Home page -->
+          <!-- Home page 
           <input id="input" placeholder="Indtast brugernavn her"><br>
           <input id="input" placeholder="Indtast kodeord her">
           <button id="loginButton">Login</button>
-          <button id="opretButton">Opret profil</button>
+          <button id="opretButton">Opret profil</button> -->
+
+
+          <input type="input" id="idToGet" placeholder="id som du vil get fra">
+          <button id="getButton">getProfile</button>
+          <div id="userProfile"></div>
+
+          <!-- <button id="getAllButton"></button>
+          <div id="userResults"></div>
+
+          <button id="createButton"></button>
+          <input type="input"> -->
+
         </div>
                
       </div>
