--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -11,11 +11,11 @@
   <div class="container-fluid wrapper">
     <div class="row">
       <div class="col">
-        <h1>Run'n Fun</h1>     
+        <h1 class="rainbow">Run'n Fun</h1><br>     
         <div id="content">
           <!-- Home page -->
-          <input id="input" placeholder="Indtast brugernavn her"><br>
-          <input id="input" placeholder="Indtast kodeord her">
+          <input id="input" placeholder="Indtast brugernavn her"><br> 
+          <input id="input" placeholder="Indtast kodeord her"><br><br>  
           <button id="loginButton">Login</button>
           <button id="opretButton">Opret profil</button>
         </div>
