create profile NOT done

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -24,12 +24,18 @@
 
           <input type="input" id="idToGet" placeholder="id som du vil get fra">
           <button id="getButton">getProfile</button>
-          <div id="userProfile"></div>
+          <div id="ProfileById"></div>
 
-          <!-- <button id="getAllButton"></button>
-          <div id="userResults"></div>
+          <button id="getAllButton">getAllProfiles</button>
+          <div id="AllProfiles"></div><br>
 
-          <button id="createButton"></button>
+          <div>Create profile</div><br>
+          <input type="input" id="firstName" placeholder="firstname">
+          <input type="input" id="lastName" placeholder="lastname">
+          <input type="input" id="birthday" placeholder="birthday">
+          <button id="CreateProfileButton">Create</button>
+
+          <!-- <button id="createButton"></button>
           <input type="input"> -->
 
         </div>
