--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -11,7 +11,7 @@
   <div class="container-fluid wrapper">
     <div class="row">
       <div class="col">
-        <h1 class="rainbow">Run'n Fun</h1><br>     
+        <h1 id="title", class="rainbow">Run'n Fun</h1><br>     
         <div id="content">
 
           <!-- Home page -->
@@ -26,19 +26,19 @@
           <button id="getButton">getProfile</button>
           <div id="ProfileById"></div>
 
-          <button id="getAllButton">getAllProfiles</button>
-          <div id="AllProfiles"></div><br>
+          <!-- <button id="getAllButton">getAllProfiles</button>
+          <div id="AllProfiles"></div><br> -->
 
           <div>Create profile</div><br>
           <input type="input" id="firstName" placeholder="firstname">
           <input type="input" id="lastName" placeholder="lastname">
           <input type="input" id="birthday" placeholder="birthday">
-          <button id="CreateProfileButton">Create</button>
+          <button id="CreateProfileButton">Create</button> -->
 
           <!-- <button id="createButton"></button>
-          <input type="input"> -->
+          <input type="input"> <-->
 
-        </div>
+          </div>
                
       </div>
     </div>
@@ -46,4 +46,4 @@
 
 <script src="bundle.js"></script>
 </body>
-</html>
+</html> 
