working profil data

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -22,9 +22,9 @@
           <button id="opretButton">Opret profil</button> -->
 
 
-          <input type="input" id="idToGet" placeholder="id som du vil get fra">
-          <button id="getButton">getProfile</button>
           <div id="ProfileById"></div>
+          <input type="input" id="idToGet" placeholder="indtast id">
+          <button id="getButton">getProfile</button>
 
           <!-- <button id="getAllButton">getAllProfiles</button>
           <div id="AllProfiles"></div><br> -->
