step med højde længde

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -32,8 +32,10 @@
           <button id="createButton"></button>
           <input type="input"> -->
 
+          <div id="userResultById">
+            
+          </div>
         </div>
-               
       </div>
     </div>
   </div>
