restservice get by username

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -13,8 +13,8 @@
         <h1 id="title", class="rainbow">Run'n Fun</h1><br>     
         <div id="content">
           <!-- Home page -->
-          <input id="input" placeholder="Indtast brugernavn her"><br> 
-          <input id="input" placeholder="Indtast kodeord her"><br><br>  
+          <input id="loginUsername" placeholder="Indtast brugernavn her"><br> 
+          <input id="loginPassword" placeholder="Indtast kodeord her"><br><br>  
 
           <!-- Login button -->
           <button id="loginButton">Login</button>
