Translate to danish, added weight and height

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -34,9 +34,11 @@
 
           <!-- Create profile -->
           <div>Create profile</div><br>
-          <input type="input" id="firstName" placeholder="firstname">
-          <input type="input" id="lastName" placeholder="lastname">
-          <input type="input" id="birthday" placeholder="birthday">
+          <input type="input" id="firstName" placeholder="Fornavn">
+          <input type="input" id="lastName" placeholder="Efternavn">
+          <input type="input" id="birthday" placeholder="Fødselsdag">
+          <input type="input" id="weight" placeholder="Vægt">
+          <input type="input" id="height" placeholder="Højde">
           <button id="CreateProfileButton">Create</button>
           <div id="space">  </div>
 
