get all btn, added data

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -12,44 +12,41 @@
       <div class="col">
         <h1 id="title", class="rainbow">Run'n Fun</h1><br>     
         <div id="content">
-          <!-- Home page -->
+            <!-- HOME PAGE -->
           <input id="loginUsername" placeholder="Indtast brugernavn her"><br> 
           <input id="loginPassword" placeholder="Indtast kodeord her"><br><br>  
 
-          <!-- Login button -->
-          <button id="loginButton">Login</button>
+            <!-- LOGIN BUTTON -->
+          <button id="loginButton">Log ind</button>
 
-          <!-- Create profile button -->
+            <!-- CREATE PROFILE BUTTON -->
           <button id="opretButton">Opret profil</button> -->
           <!-- <button id="createButton"></button>
           <input type="input"> -->
 
-          <!-- Get profile by id -->
+            <!-- GET PROFILE BY ID -->
           <div id="ProfileById"></div>
           <input type="input" id="idToGet" placeholder="indtast id">
           <button id="getButton">getProfile</button>
 
-          <!-- <button id="getAllButton">getAllProfiles</button>
-          <div id="AllProfiles"></div><br> -->
+          <button id="getAllButton">getAllProfiles</button>
+          <div id="AllProfiles"></div><br>
 
-          <!-- Create profile -->
-          <div>Create profile</div><br>
+            <!-- CREATE PROFILE -->
+          <!-- <div>Create profile</div><br>
           <input type="input" id="firstName" placeholder="Fornavn">
           <input type="input" id="lastName" placeholder="Efternavn">
           <input type="input" id="birthday" placeholder="Fødselsdag">
           <input type="input" id="weight" placeholder="Vægt">
           <input type="input" id="height" placeholder="Højde">
-          <button id="CreateProfileButton">Create</button>
-          <div id="space">  </div>
+          <button id="CreateProfileButton">Create</button> -->
 
-          <!-- BMI -->
+            <!-- BMI -->
           <div id="bmi">BMI: </div>
 
-          <!-- Delete profile -->
+            <!-- DELETE PROFILE -->
           <button id="deleteButton"> Slet profil</button>
           <input type="text" id="idToDelete"  placeholder="id på den profil du vil slette">
-
-          <div id="userResultById">
             
           </div>
         </div>
