--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -20,9 +20,7 @@
           <button id="loginButton">Log ind</button>
 
             <!-- CREATE PROFILE BUTTON -->
-          <button id="opretButton">Opret profil</button> -->
-          <!-- <button id="createButton"></button>
-          <input type="input"> -->
+          <button id="CreateProfilePageButton">Opret profil</button>
 
             <!-- GET PROFILE BY ID -->
           <div id="ProfileById"></div>
