profile page with update

--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -13,14 +13,14 @@
         <h1 id="title", class="rainbow">Run'n Fun</h1><br>     
         <div id="content">
             <!-- HOME PAGE -->
-          <input id="loginUsername" placeholder="Indtast brugernavn her"><br> 
-          <input id="loginPassword" placeholder="Indtast kodeord her"><br><br>  
+          <input id="loginUsername" type="text" placeholder="Indtast brugernavn her"><br> 
+          <input id="loginPassword" type="password" placeholder="Indtast kodeord her"><br><br>  
 
             <!-- LOGIN BUTTON -->
-          <button id="loginButton">Log ind</button>
+          <button class="btn" id="loginButton">Log ind</button>
 
-            <!-- CREATE PROFILE BUTTON
-              eButton">Opret profil</button>
+            <!-- CREATE PROFILE BUTTON -->
+            <button class="btn" id="createProfilePageButton">Opret profil</button>
 
           <!-- 
           <div id="ProfileById"></div>
