--- a/frontend/src/index.htm
+++ b/frontend/src/index.htm
@@ -13,8 +13,18 @@
         <h1 id="title", class="rainbow">Run'n Fun</h1><br>     
         <div id="content">
             <!-- HOME PAGE -->
-          <input id="loginUsername" type="text" placeholder="Indtast brugernavn her"><br> 
-          <input id="loginPassword" type="password" placeholder="Indtast kodeord her"><br><br>  
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Brugernavn</span>
+            </div>
+            <input type="text" id="loginUsername" class="form-control" placeholder="Indtast brugernavn her" aria-label="Username" aria-describedby="basic-addon1">          
+          </div>
+          <div class="input-group">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="basic-addon1">Password</span>
+            </div>
+            <input type="password" id="loginPassword" class="form-control" placeholder="Indtast kodeord her" aria-label="Username" aria-describedby="basic-addon1">          
+          </div>
 
             <!-- LOGIN BUTTON -->
           <button class="btn" id="loginButton">Log ind</button>
